<resources>
    <string name="app_name">FeedPage</string>
    <string name="search_text">Search</string>
    <string name="reset_text">Reset </string>
    <string name="date_sort_text">Sort by Date</string>
    <string name="likes_sort_text">Sort by Likes</string>
    <string name="views_sort_text">Sort by Views</string>
    <string name="shares_sort_text">Sort by Shares</string>
    <string name="no_data_message">We are not getting any results.\nTry another search</string>
    <string name="postname">POSTNAME</string>
    <string name="postdate">POSTDATE</string>
    <string name="postlikes">0</string>
    <string name="postviews">0</string>
    <string name="postshares">0</string>
</resources>
